--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Sagnac"]
 version = "0.3.0"
 
 [deps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
