--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,8 @@ authors = ["Sagnac"]
 version = "0.4.0"
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 
 [compat]
 GLMakie = "0.9.2"
-Images = "0.26.0"
