--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.6.2"
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
