Pull `Colors` from `Sagnac:master`, `IntervalSets` from `Sagnac:range`
Julia 1.11 makes it easy to do this using the sources section so instead
of waiting until things get merged and released this allows the package
immediate access to the features; this can easily be reversed anyway and
once things get updated this will again depend on the registered
packages.

Colors had to be forked here in order to specify a different version
number due to compatibility requirements with Makie.

--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 GLMakie = "0.9.6 - 0.10"
+
+[sources]
+Colors = {url = "https://github.com/Sagnac/Colors.jl", rev = "master"}
+IntervalSets = {url = "https://github.com/Sagnac/IntervalSets.jl", rev = "range"}
