--- a/Project.toml
+++ b/Project.toml
@@ -10,8 +10,5 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+Colors = "0.13"
 GLMakie = "0.13"
-
-[sources]
-Colors = {url = "https://github.com/Sagnac/Colors.jl", rev = "master"}
-IntervalSets = {url = "https://github.com/Sagnac/IntervalSets.jl", rev = "range"}
