--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ComplexColor"
 uuid = "58ce148e-7931-477b-ae5e-998318829365"
 authors = ["Sagnac"]
-version = "0.7.0"
+version = "0.8.0"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -12,3 +12,4 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 [compat]
 Colors = "0.13"
 GLMakie = "0.13"
+IntervalSets = "0.7.11"
